Bug 297424 - networkmanagement is missing support for ipv6 autoconf in UI
Summary: networkmanagement is missing support for ipv6 autoconf in UI
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Wired (other bugs)
Version First Reported In: 0.9
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Lamarque V. Souza
URL:
Keywords:
: 300571 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-04-03 21:38 UTC by Dennis Schridde
Modified: 2012-05-24 20:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dennis Schridde 2012-04-03 21:38:39 UTC
According to [1] NetworkManager supports ipv6 autoconf since version 0.8. KDE networkmanagement 0.9 is missing support for this in the UI (libs/ui/ipv6.ui line 108ff).

[1] http://live.gnome.org/NetworkManager/ReleaseProcess
Comment 1 Lamarque V. Souza 2012-05-24 03:01:37 UTC
Git commit 6c30f58a1a6292b12bd9daf821d75a2745cc9c4a by Lamarque V. Souza.
Committed on 24/05/2012 at 03:03.
Pushed by lvsouza into branch 'master'.

Add "Automatic (DHCP only)" as possible IPv6 activation method. The
default IPv6 activation method is "Automatic" now.
IPv6 supports "Automatic", "Automatic (addresses only)" and
"Automatic (DHCP only)". IPv4 supports "Automatic (DHCP)" and "Automatic
(DHCP) addresses only".
FIXED-IN: 0.9.0.3

M  +1    -0    libs/internals/schemas/ipv6.kcfg
M  +7    -2    libs/ui/ipv6.ui
M  +15   -42   libs/ui/ipv6widget.cpp

http://commits.kde.org/networkmanagement/6c30f58a1a6292b12bd9daf821d75a2745cc9c4a
Comment 2 Lamarque V. Souza 2012-05-24 03:01:37 UTC
Git commit 35c4ef8d34563b061acf1a83d930345eec166060 by Lamarque V. Souza.
Committed on 24/05/2012 at 03:03.
Pushed by lvsouza into branch 'nm09'.

Add "Automatic (DHCP only)" as possible IPv6 activation method. The
default IPv6 activation method is "Automatic" now.
IPv6 supports "Automatic", "Automatic (addresses only)" and
"Automatic (DHCP only)". IPv4 supports "Automatic (DHCP)" and "Automatic
(DHCP) addresses only".
FIXED-IN: 0.9.0.3
(cherry picked from commit 6c30f58a1a6292b12bd9daf821d75a2745cc9c4a)

M  +1    -0    libs/internals/schemas/ipv6.kcfg
M  +7    -2    libs/ui/ipv6.ui
M  +15   -42   libs/ui/ipv6widget.cpp

http://commits.kde.org/networkmanagement/35c4ef8d34563b061acf1a83d930345eec166060
Comment 3 Lamarque V. Souza 2012-05-24 20:41:40 UTC
*** Bug 300571 has been marked as a duplicate of this bug. ***