Add "Automatic (DHCP only)" as possible IPv6 activation method. The default IPv6 activation method is "Automatic" now. IPv6 supports "Automatic", "Automatic (addresses only)" and "Automatic (DHCP only)". IPv4 supports "Automatic (DHCP)" and "Automatic (DHCP) addresses only".

BUG: 297424
FIXED-IN: 0.9.0.3
(cherry picked from commit 6c30f58a1a6292b12bd9daf821d75a2745cc9c4a)